--- a/SimpleNetworking/SimpleNetworking.xcodeproj/xcshareddata/xcschemes/SimpleNetworking.xcscheme
+++ b/SimpleNetworking/SimpleNetworking.xcodeproj/xcshareddata/xcschemes/SimpleNetworking.xcscheme
@@ -61,16 +61,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2C46F2C32395F0DA0094790D"
-            BuildableName = "Example.app"
-            BlueprintName = "Example"
-            ReferencedContainer = "container:../Example/Example.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -78,16 +68,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2C46F2C32395F0DA0094790D"
-            BuildableName = "Example.app"
-            BlueprintName = "Example"
-            ReferencedContainer = "container:../Example/Example.xcodeproj">
+            BlueprintIdentifier = "2C46F2A02395F0C00094790D"
+            BuildableName = "SimpleNetworking.framework"
+            BlueprintName = "SimpleNetworking"
+            ReferencedContainer = "container:SimpleNetworking.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
