--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ os: osx
 osx_image: xcode11.2
 xcode_project: SimpleNetworking/SimpleNetworking.xcodeproj
 xcode_scheme: SimpleNetworkingTests
-xcode_destination: platform=iOS Simulator,id=1AB2BB6F-A1DD-4FDF-B020-38FA6E8B95DA,OS=13.2.2
+xcode_destination: platform=iOS Simulator,name=iPhone 5,OS=10.3.1
